style.css
:root {
  .dark {
    --background-color: rgb(17, 20, 18);
    --text-color: rgb(241, 255, 246);
    --primary-color: rgb(73, 255, 134);
    --hover-color: rgba(255, 255, 255, 0.2);
    --card-color: rgba(255, 255, 255, 0.1);
  }
  .light {
    --background-color: rgb(208, 218, 199);
    --text-color: rgb(53, 58, 51);
    --primary-color: green;
    --hover-color: white;
    --card-color: rgba(255, 255, 255, 0.6);
  }
}

@font-face {
  font-family: 'Cascadia Code';
  src: url(/fonts/CascadiaCode-Regular.ttf);
}

body, html {

  margin: 0;
  color: var(--text-color);
  background-color: var(--background-color);
  font-family: 'Cascadia Code';
}
button {
  font-family: 'Cascadia Code';
}
body {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.container {
  width: 60vw;
  max-width: 1530px;
}

* {
  box-sizing: border-box;
}


header {
  display: flex;
  align-items: center;
  align-self: center;
  opacity: 0;
  animation: header-animation 0.4s ease-in-out;
  animation-delay: 0.2s;
  animation-fill-mode: forwards;
  .title {
    padding: 6px;
    border-radius: 9999px;
    color: var(--primary-color);
    cursor: pointer;
    transition: 0.2s;
    &:hover {
      background-color: var(--hover-color);
    }
  }
  #toggle-theme {
    padding: 6px;
    margin-left: auto;
    border: none;
    border-radius: 9999px;
    color: var(--text-color);
    background-color: transparent;
    cursor: pointer;
    transition: 0.2s;
    font-size: 16px;
    &:hover {
      background-color: var(--hover-color);
    }
  }
  
}

.info-section {
  display: flex;
  align-items: center;
  margin-top: 34px;
  opacity: 0;
  animation:section-animation 0.4s ease-in-out;
  animation-delay: 0.5s;
  animation-fill-mode: forwards;
  gap: 54px;
  .logo {
    max-width: 300px;
    border-radius: 60px;
  }
  .info {
    display: flex;
    flex-direction: column;
  }
  .badge {
    align-self: flex-start;
    padding: 4px;
    padding-right: 6px;
    padding-left: 6px;
    border: solid 2px var(--primary-color);
    border-radius: 9999px;
    font-size: small;

  }
  .greeting {
    text-align: center;
    .highlight {
      color: var(--primary-color);
    }
  }
  .description {
    opacity: 0.8;
  }
  .cards-section {
    display: flex;
    flex-direction: column;
    .card-list {
      display: flex;
      flex-wrap: wrap;
      gap: 6px;
      div, a {
        display: flex;
        align-items: center;
        padding: 6px;
        border-radius: 16px;
        color: var(--text-color);
        background-color: var(--card-color);
        text-decoration: none;
        gap: 6px;
      }
      a {
        cursor: pointer;
        transition: 0.2s;
        &:hover {
          background-color: var(--hover-color);
        }
      }
      img {
        height: 24px;
      }
    }
  }
}

.projects-section {
  margin-top: 66px;
  margin-bottom: 10px;
  opacity: 0;
  animation:section-animation 0.4s ease-in-out;
  animation-delay: 0.8s;
  animation-fill-mode: forwards;
  .title {
    color: var(--primary-color);
  }
  #projects {
    display: flex;
    flex-direction: column;
    gap: 8px;
    
  }
  .project-item {
    padding: 16px;
    border-radius: 16px;
    background-color: var(--card-color);
    .project-title {
      margin-top: 0;
    }
    .project-description {
      opacity: 0.8;
    }
    .project-stack-list {
      display: flex;
      flex-wrap: wrap;
      margin-bottom: 16px;
      gap: 8px;
      span {
        padding-right: 8px;
        border-right: solid 1px var(--text-color);
        opacity: 0.6;
        font-size: small;
        &:last-child {
          padding-right: 0;
          border-right: none;
        }
      }

    }
    .project-actions {
      display: flex;
      gap: 8px;
  
    }
    a {
      padding-right: 8px;
      border-right: solid 1px var(--text-color);
      color: var(--primary-color);
      transition: 0.2s;
      text-decoration: none;
      &:last-child {
        padding-right: 0;
        border-right: none;

      }
      &:hover {
        text-decoration: underline;
      }
    }
  }
}




.dark [data-hide-on-dark] {
  display: none !important;  
}
.light [data-hide-on-light] {
  display: none !important;  
}
.dark [invert-on-dark] {
  filter: invert(1);
}
.light [invert-on-light] {
  filter: invert(1);
}

@media (max-width: 1750px) {
  .container {
    width: 80vw;
  }
}
@media (max-width: 1060px) {
  .container {
    width: 90vw;
  }
}


@media (max-width: 940px) {
  .container {
    
  }
  .info-section {
    align-items: center;
    flex-direction: column;
    text-align: center;
    .logo {
      width: 100%;
      max-width: 200px;
      border-radius: 60px;
    }
    .badge {
      align-self: center;
    }
    .cards-section {
      .card-list {
        justify-content: center;
      }
    }
  }
}


@keyframes header-animation {
  from {
    opacity: 0;
    transform: translateY(-40px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
} 

@keyframes section-animation {
  from {
    opacity: 0;
    transform: translateY(20px);
  
    }
  to {
    opacity: 1;
    transform: translateY(0);

  }
}

